# obs-lingleipidkongzhi

./: .gitignore  CMakeLists.txt  CMakePresets.json  FAQ.md  LICENSE  README.md  buildspec.json  vcpkg-configuration.json  vcpkg.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/package-plugin/: action.yaml
.github/scripts/: install-vcpkg-macos.bash
.github/workflows/: dispatch.yaml  pages.yaml  pr-pull.yaml  push.yaml
build-aux/: .run-format.zsh
cmake/: DownloadOnnxruntime.cmake
cmake/macos/: xcode.cmake
data/locale/: ar-EG.ini  bn-IN.ini  en-US.ini  es-SP.ini  fr-FR.ini  hi-IN.ini  it-IT.ini  ja-JP.ini  ko-KR.ini  pt-BR.ini  ru-RU.ini  ta-IN.ini  tr-TR.ini  zh-CN.ini
data/models/: SINet_Softmax_simple.with_runtime_opt.ort  mediapipe.with_runtime_opt.ort  required_operators.with_runtime_opt.config  selfie_segmentation.with_runtime_opt.ort  semantic_guided_llie_180x324.with_runtime_opt.ort  tbefn_fp32.with_runtime_opt.ort  tcmonodepth_tcsmallnet_192x320.with_runtime_opt.ort  uretinex_net_180x320.with_runtime_opt.ort  zero_dce_180x320.with_runtime_opt.ort
docs/: BUG-REPORTING.md  BUILDING-CUDA-LINUX.md
pages/: .prettierrc  astro.config.mjs  package-lock.json  package.json
pages/src/components/: Chat.svelte  DefineFileVerifierDropArea.astro  DefineLocalDate.astro  FileVerifierDropArea.ts  FileVerifierResultDialog.ts  LocalDate.ts
pages/src/layouts/: Layout.astro  MarkdownLayout.astro
pages/src/lib/: info.ts  llm.ts
pages/src/pages/: 404.astro  arch.md  flatpak.astro  index.astro  interactive-help.astro  macos.astro  ubuntu.astro  uninstall.md  usage.astro  windows.astro
pages/src/pages/dev/: index.astro  macos.md  ubuntu.md  windows.md
pages/src/pages/metadata/: latest-version.txt.ts
pages/src/pages/versions/: [version].astro  index.astro
pages/src/styles/: global.css
scripts/: convert_selfie_multiclass.py  package-plugin-windows.ps1
scripts/windows/: How to install plugin on Windows.txt  Install Into Here.lnk  remove-old-installation.bat  如何安装插件.txt
src/: ConfigManager.cpp  ConfigManager.hpp  DelayLoad.cpp  DerivativePredictor.cpp  DerivativePredictor.hpp  FilterData.h  HungarianAlgorithm.cpp  HungarianAlgorithm.hpp  LogitechMacroConverter.cpp  LogitechMacroConverter.hpp  MAKCUMouseController.cpp  MAKCUMouseController.hpp  MouseController.cpp  MouseController.hpp  MouseControllerInterface.hpp  RecoilPatternManager.cpp  RecoilPatternManager.hpp  background-filter.cpp  consts.h  enhance-filter.cpp  plugin-main.c  plugin-support.h  yolo-detector-filter-info.c  yolo-detector-filter.cpp  yolo-detector-filter.h
src/models/: Detection.h  Model.h  ModelMediapipe.h  ModelPPHumanSeg.h  ModelRMBG.h  ModelRVM.h  ModelSINET.h  ModelSelfie.h  ModelSelfieMulticlass.h  ModelTBEFN.h  ModelTCMonoDepth.h  ModelURetinex.h  ModelYOLO.cpp  ModelYOLO.h  ModelZeroDCE.h
src/obs-utils/: obs-config-utils.cpp  obs-config-utils.h  obs-utils.cpp
src/ort-utils/: ort-session-utils.cpp
src/update-checker/: Client.hpp  github-utils.cpp  github-utils.h  update-checker.cpp
src/update-checker/CurlClient/: CMakeLists.txt  CurlClient.cpp
vcpkg-triplets/: arm64-osx-obs.cmake  x64-linux-obs.cmake  x64-osx-obs.cmake  x64-windows-static-md-obs.cmake
